--- a/ui/ui-frontend-common/src/app/modules/components/vitamui-input/vitamui-input.component.html
+++ b/ui/ui-frontend-common/src/app/modules/components/vitamui-input/vitamui-input.component.html
@@ -4,13 +4,10 @@
     <span *ngIf="required" class="required-marker">*</span>
   </label>
 
-  <input *ngIf="type !== 'number'" [type]="type" [required]="required" [disabled]="disabled" [autofocus]="autofocus"
+  <input #vitamUIInput [type]="type" [required]="required" [disabled]="disabled" [autofocus]="autofocus"
     [attr.maxlength]="maxlength" (blur)="onBlur()" (focus)="onFocus()" [(ngModel)]="value"
-    (ngModelChange)="onTextChange($event)" #input>
+    (ngModelChange)="onValueChange($event)">
 
-  <input *ngIf="type === 'number'" type="number" [required]="required" [disabled]="disabled" [autofocus]="autofocus"
-    [attr.maxlength]="maxlength" (blur)="onBlur()" (focus)="onFocus()" [(ngModel)]="value"
-    (ngModelChange)="onNumberChange($event)" #input>
 
   <mat-spinner diameter="25" color="accent"></mat-spinner>
 </div>
