New Frontend Input component : Allow only positive numbers & upgrade ui-frontend-common to 0.0.14

--- a/ui/ui-frontend/projects/demo/src/app/demo/component-demo/components/components.component.html
+++ b/ui/ui-frontend/projects/demo/src/app/demo/component-demo/components/components.component.html
@@ -17,6 +17,13 @@
     </vitamui-common-input>
   </div>
 
+  <h3>Input Positive Number</h3>
+  <div class="demo-block">
+    <vitamui-common-input-positive-number placeholder="Number Input" [(ngModel)]="VitamUIInputPositiveNumberValue"
+       required (keypress)="onKeyPress($event)" #VitamUIInputPositiveNumber="ngModel" type="number" min="0">
+    </vitamui-common-input-positive-number>
+  </div>
+
   <div class="demo-block">
     <vitamui-common-slide-toggle>Slide Toggle</vitamui-common-slide-toggle>
   </div>
