Customers App : fix drag and drop issue for graphical identity

--- a/ui/ui-frontend/projects/identity/src/app/customer/customer-preview/graphic-identity-tab/graphic-identity-update/graphic-identity-update.component.html
+++ b/ui/ui-frontend/projects/identity/src/app/customer/customer-preview/graphic-identity-tab/graphic-identity-update/graphic-identity-update.component.html
@@ -12,7 +12,7 @@
         <div i18n="Customer graphical identity max size label@@customerGraphicalIdentityMaxSizeLabel">(taille max 280px * 100px)</div>
       </div>
       <div class="drag-and-drop-area" [ngClass]="{'on-over': hasDropZoneOver}"
-        vitamuiDragAndDrop
+        vitamuiCommonDragAndDrop
         (fileToUploadEmitter)="onImageDropped($event)"
         (fileDragOverEmitter)="onImageDragOver($event)"
         (fileDragLeaveEmitter)="onImageDragLeave($event)">
