[TECH] Fix close action when viewing popup for customer, group, profile and user

--- a/ui/ui-frontend/projects/identity/src/app/group/group.component.html
+++ b/ui/ui-frontend/projects/identity/src/app/group/group.component.html
@@ -1,7 +1,7 @@
 <mat-sidenav-container [autosize]="true" [hasBackdrop]="false">
 
   <mat-sidenav #panel mode="side" position="end" [fixedInViewport]="true">
-    <app-group-preview *ngIf="openedItem" (groupClose)="closePanel()" [group]="openedItem"></app-group-preview>
+    <app-group-preview *ngIf="openedItem" (previewClose)="closePanel()" [group]="openedItem"></app-group-preview>
   </mat-sidenav>
 
   <mat-sidenav-content>
