[DLAB-4126] Upgrade deployment (PKI & Ansible scripts)
- Upgrade functions.sh: 
Addition of genericity on the functions allowing to handle a vault file
- Add ERASE as input parameters on PKI's scripts in order to preverse existing items when we execute scripts (add module, clients ...)
- Upgrade generate_stores.sh in order to populate dynamically the linked vault file
- Upgrade packaging in order to add the archive of deployment
- Upgrade scripts according to the PKI in order to clean/fix deployment for keystores/trustores and linked configuration

--- a/deployment/roles/reverse/templates/nginx/conf.d/vitam_proxy.conf.j2
+++ b/deployment/roles/reverse/templates/nginx/conf.d/vitam_proxy.conf.j2
@@ -3,7 +3,7 @@
 # upstream_portal
 upstream vitam_ihm_demo {
     ip_hash;
-{% for h in groups['hosts-ihm-demo'] %}
+{% for h in groups['hosts_ihm_demo'] %}
     server {{ hostvars[h].ip_service }}:{{ vitam_vars.ihm_demo.port_service }};
 {% endfor %}
 }
