--- a/deployment/roles/vitamui/templates/cas-server/application.yml.j2
+++ b/deployment/roles/vitamui/templates/cas-server/application.yml.j2
@@ -3,7 +3,7 @@ server:
   ssl:
     key-store: {{ vitamui_folder_conf }}/keystore_{{ vitamui_struct.package_name }}.jks
     key-store-password: {{ password_keystore }}
-    key-password: {{ password_manager_keystore }}
+    key-password: {{ password_keystore }}
 {% endif %}
   host: {{ ip_service }}
   port: {{ vitamui_struct.port_service }}
@@ -29,8 +29,8 @@ iam-client:
       key-password: {{ password_keystore }}
       type: JKS
     truststore:
-      key-path: {{ vitamui_folder_conf }}/truststore_{{ vitamui_struct.package_name }}.jks
-      key-password: {{ password_truststore_server }}
+      key-path: {{ vitamui_folder_conf }}/truststore_{{ vitamui_certificate_type }}.jks
+      key-password: {{ password_truststore }}
     hostname-verification: false
 {% endif %}
 
