--- a/deployment/roles/vitamui/templates/iam-external/application.yml.j2
+++ b/deployment/roles/vitamui/templates/iam-external/application.yml.j2
@@ -19,10 +19,10 @@ server:
   ssl:
     key-store: {{ vitamui_folder_conf }}/keystore_{{ vitamui_struct.package_name }}.jks
     key-store-password: {{ password_keystore }}
-    key-password: {{ password_manager_keystore }}
-    trust-store: {{ vitamui_folder_conf }}/truststore_{{ vitamui_struct.package_name }}.jks
-    trust-store-password: {{ password_truststore_server }}
-    client-auth: need #WAZA ???
+    key-password: {{ password_keystore }}
+    trust-store: {{ vitamui_folder_conf }}/truststore_{{ vitamui_certificate_type }}.jks
+    trust-store-password: {{ password_truststore }}
+    client-auth: need
 {% endif %}
   tomcat:
     accesslog:
@@ -52,7 +52,7 @@ iam-external:
         key-password: {{ password_keystore }}
         type: JKS
       truststore:
-        key-path: {{ vitamui_folder_conf }}/truststore_{{ vitamui_certificate_client_type }}.jks
+        key-path: {{ vitamui_folder_conf }}/truststore_{{ vitamui_certificate_type }}.jks
         key-password:  {{ password_truststore }}
       hostname-verification: false
 {% endif %}
@@ -67,7 +67,7 @@ iam-external:
         key-password: {{ password_keystore }}
         type: JKS
       truststore:
-        key-path: {{ vitamui_folder_conf }}/truststore_{{ vitamui_certificate_client_type }}.jks
+        key-path: {{ vitamui_folder_conf }}/truststore_{{ vitamui_certificate_type }}.jks
         key-password:  {{ password_truststore }}
       hostname-verification: false
 {% endif %}
