--- a/deployment/roles/vitamui/templates/ui-portal/application.yml.j2
+++ b/deployment/roles/vitamui/templates/ui-portal/application.yml.j2
@@ -15,8 +15,8 @@ server:
 {% if vitamui.portal.secure|lower =='true' %}
   ssl:
     key-store: {{ vitamui_folder_conf }}/keystore_{{ vitamui_struct.package_name }}.jks
-    key-store-password: {{ password_keystore }} # TODO OMA : revoir
-    key-password: {{ password_manager_keystore }}
+    key-store-password: {{ password_keystore }}
+    key-password: {{ password_keystore }}
 {% endif %}
   tomcat:
     accesslog:
@@ -51,7 +51,7 @@ ui-portal:
         key-password: {{ password_keystore }}
         type: JKS
       truststore:
-        key-path: {{ vitamui_folder_conf }}/truststore_{{ vitamui_certificate_client_type }}.jks
+        key-path: {{ vitamui_folder_conf }}/truststore_{{ vitamui_certificate_type }}.jks
         key-password: {{ password_truststore }} # TODO OMA : revoir
       hostname-verification: false
 {% endif %}
@@ -88,6 +88,6 @@ cas:
   callback-url: ${ui.url}/portal-api/callback
 {% if vitamui.cas_server.secure|lower == "true" %}
   ssl:
-    trust-store: {{ vitamui_folder_conf }}/truststore_{{ vitamui_certificate_client_type }}.jks
+    trust-store: {{ vitamui_folder_conf }}/truststore_{{ vitamui_certificate_type }}.jks
     trust-store-password: {{ password_truststore }}
 {% endif %}
